[project]
name = "sam-med2d"
version = "0.1.0"
description = "SAM-Med2D: Segment Anything in 2D Medical Imaging"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "pillow>=8.0.0",
    "timm>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["segment_anything"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.txt", "*.md"]